--- a/Proyecto Sim Mat..ipynb
+++ b/Proyecto Sim Mat..ipynb
@@ -6,6 +6,13 @@
    "source": [
     "# Proyecto #"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Descripción"
+   ]
   }
  ],
  "metadata": {
